[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
clap = { version = "4.4.18", features = ["derive"] }
serde = "1.0.195"
serde_json = "1.0.111"
failure = "0.1.8"
structopt = "0.3.26"
log = "0.4.20"
stderrlog = "0.6.0"
sled = "1.0.0-alpha.120"
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "engine_bench"
harness = false